made user menu visible after being clicked instead of hovered; fixed 401 status from users/login

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,12 +111,13 @@ button:disabled {
 
 .topnav-actions-dropdown-content {
     display: none;
+    flex-direction: column;
+    height: fit-content;
 }
 
-#topnav-actions-dropdown:hover .topnav-actions-dropdown-content {
+/* #topnav-actions-dropdown:focus .topnav-actions-dropdown-content {
     display: flex;
-    flex-direction: column;
-}
+} */
 
 /* columns */
 
